# EasyMinecraftServer

./: .pre-commit-config.yaml  README.md  TODO.md  pyproject.toml
EasyMinecraftServer/: main.py
EasyMinecraftServer/data/: software_list.py  version_list.py
EasyMinecraftServer/util/: version_list.py
easy-minecraft-server/: main.py
