[tool.poetry]
name = "EasyMinecraftServer"
packages = [
    { include = "EasyMinecraftServer" },
]
version = "0.0.1"
description = ""
authors = ["Nucceteere <ruzgar@nucceteere.xyz>"]
readme = "README.md"

[tool.poetry.scripts]
easy-minecraft-server = "EasyMinecraftServer.main:app"

[tool.poetry.dependencies]
python = "^3.13"
typer = "^0.15.1"
pre-commit = "^4.1.0"
pathvalidate = "^3.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
